--- a/options/options.html
+++ b/options/options.html
@@ -18,9 +18,38 @@
                 <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
             </select>
         </div>
-        <button id="saveBtn">Save Settings</button>
-        <button id="testBtn">Test Storage</button>
+        <h2>Custom Prompts</h2>
+        <div class="prompts-container">
+            <div class="form-group">
+                <label for="improvePrompt">Improve Text Prompt:</label>
+                <textarea id="improvePrompt" rows="2">You are a helpful assistant that improves text while maintaining its original meaning.</textarea>
+            </div>
+            <div class="form-group">
+                <label for="emailPrompt">Email Conversion Prompt:</label>
+                <textarea id="emailPrompt" rows="2">You are an expert in professional email writing.</textarea>
+            </div>
+            <div class="form-group">
+                <label for="proofreadPrompt">Proofreading Prompt:</label>
+                <textarea id="proofreadPrompt" rows="2">You are a professional proofreader focusing on grammar, spelling, and punctuation.</textarea>
+            </div>
+            <div class="form-group">
+                <label for="toArabicPrompt">To Arabic Translation Prompt:</label>
+                <textarea id="toArabicPrompt" rows="2">You are a professional translator specializing in English to Arabic translation.</textarea>
+            </div>
+            <div class="form-group">
+                <label for="toEnglishPrompt">To English Translation Prompt:</label>
+                <textarea id="toEnglishPrompt" rows="2">You are a professional translator specializing in Arabic to English translation.</textarea>
+            </div>
+        </div>
+        <div class="actions">
+            <button id="resetBtn">Reset to Defaults</button>
+            <button id="saveBtn">Save Settings</button>
+        </div>
         <div id="status"></div>
+        <footer>
+            <p>Developed by <a href="https://ehsanlab.com" target="_blank">EhsanLab LLC</a> © 2024</p>
+            <p>Version 1.0.0</p>
+        </footer>
     </div>
     <script src="options.js" type="module"></script>
 </body>
